--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,20 +1,14 @@
-<!--The content below is only a placeholder and can be replaced.-->
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="#">Navbar</a>
+  <div>
+    <ul class="navbar-nav">
+      <li routerLinkActive="active" class="nav-item"><a class="nav-link" routerLink="auth">Authentification</a></li>
+      <li routerLinkActive="active" class="nav-item"><a class="nav-link" routerLink="appareils">Appareils</a></li>
+    </ul>
+  </div>
+</nav>
 <div class="container">
   <div class="row">
-    <div class="col-xs-12">
-      <h2>Mes appareils</h2>
-
-      <p>Mis à jour : {{ lastUpdate | async | date: 'yMMMMEEEEd' | uppercase }}</p>
-      <ul class="list-group">
-        <app-appareil *ngFor="let appareil of appareils; let i = index"
-                      [indexOfAppareil]="i"
-                      [appareilName]="appareil.name"
-                      [appareilStatus]="appareil.status"></app-appareil>
-      </ul>
-      <button class="btn btn-success"
-              (click)="onAllumer()">Tout allumer</button>
-      <button class="btn btn-danger"
-              (click)="onEteindre()">Tout éteindre</button>
-    </div>
+    <router-outlet></router-outlet>
   </div>
 </div>
