--- a/src/app/appareil/appareil.component.html
+++ b/src/app/appareil/appareil.component.html
@@ -2,6 +2,9 @@
                 'list-group-item-success': appareilStatus === 'allumé',
                 'list-group-item-danger': appareilStatus === 'éteint'}">
   <h4 [ngStyle]="{color: getColor()}">Appareil : {{ appareilName }} -- Statut : {{ getStatus() }}</h4>
+  <p>
+    <a [routerLink]="[id]">Détails</a>
+  </p>
   <button class="btn btn-success"
           (click)="onSwitchOn()"
           [disabled]="appareilStatus === 'allumé'">Allumer</button>
