--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,14 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Navbar</a>
   <div>
     <ul class="navbar-nav">
       <li routerLinkActive="active" class="nav-item"><a class="nav-link" routerLink="auth">Authentification</a></li>
       <li routerLinkActive="active" class="nav-item"><a class="nav-link" routerLink="appareils">Appareils</a></li>
     </ul>
+    <div class="navbar-right">
+      <p>
+        Vous êtes connecté depuis {{ secondes }} secondes !
+      </p>
+    </div>
   </div>
 </nav>
 <div class="container">
