--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
     <ul class="navbar-nav">
       <li routerLinkActive="active" class="nav-item"><a class="nav-link" routerLink="auth">Authentification</a></li>
       <li routerLinkActive="active" class="nav-item"><a class="nav-link" routerLink="appareils">Appareils</a></li>
+      <li routerLinkActive="active" class="nav-item"><a class="nav-link" routerLink="edit">Nouvel appareil</a></li>
     </ul>
     <div class="navbar-right">
       <p>
