--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,7 @@
       <li routerLinkActive="active" class="nav-item"><a class="nav-link" routerLink="auth">Authentification</a></li>
       <li routerLinkActive="active" class="nav-item"><a class="nav-link" routerLink="appareils">Appareils</a></li>
       <li routerLinkActive="active" class="nav-item"><a class="nav-link" routerLink="edit">Nouvel appareil</a></li>
+      <li routerLinkActive="active" class="nav-item"><a class="nav-link" routerLink="users">Utilisateurs</a></li>
     </ul>
     <div class="navbar-right">
       <p>
