--- a/src/app/appareil-view/appareil-view.component.html
+++ b/src/app/appareil-view/appareil-view.component.html
@@ -13,4 +13,8 @@
           (click)="onAllumer()">Tout allumer</button>
   <button class="btn btn-danger"
           (click)="onEteindre()">Tout éteindre</button>
+  <button class="btn btn-success"
+          (click)="onSave()">Enregistrer</button>
+  <button class="btn btn-primary"
+          (click)="onFetch()">Charger</button>
 </div>
